--- a/scorebd.css
+++ b/scorebd.css
@@ -10,6 +10,8 @@ body {
    
 }
 
+
+
 .container {
     /*padding: auto;*/
     display: flex;
@@ -18,9 +20,9 @@ body {
     max-width: 80%;
     /*margin-top: 20%;*/
     
-    width: 570px;
-    height: 385px;
-    background: #1B244A;
+    width: 600px;
+    height: 400px;
+    background-image: linear-gradient(180deg, #200835 0%,#000000  100%);
     border-radius: 5%;
     box-shadow: 2px 2px 2px black,-2px -2px white;
    
@@ -44,6 +46,13 @@ body {
    
 }
 
+.home-logo,
+.guest-logo{
+    
+    margin: 10px 4px;
+    height: 60px;
+    width: 60px;
+}
 
 #homescore{
 
@@ -74,6 +83,8 @@ body {
     padding-top: 13%;
     padding-left: 3%;
     justify-content: space-between;
+    position: relative;
+    
 }
 
 #decre{
@@ -81,6 +92,8 @@ body {
     padding-top: 13%;
     padding-left: 3%;
     justify-content: space-between;
+   
+    position: relative;
 
 
 }
@@ -92,6 +105,9 @@ body {
     height: 45px;
     border: 2px solid #9AABD8;
     border-radius: 5px;
+    color: white;
+    font-size:20px;
+    font-weight: 700px;
 
 }
 
@@ -102,9 +118,9 @@ body {
     height: 45px;
     border: 2px solid #9AABD8;
     border-radius: 5px;
-
-
-
+    color: white;
+    font-size:20px;
+    font-weight: 700px;
 }
 
 
@@ -162,5 +178,232 @@ h4{
     color: #9AABD8;
 }
 
+
+
+
+@media only screen and (max-width: 600px ){
+    
+    #home-div{
+        margin-left: 70%;
+        padding: 4%;    
+    }
+
+    #guest-div{
+        margin-right: -50%;
+        padding: 4%;   
+    }
+    .container{
+    max-width: 75%; 
+    width: 575px;
+    height: 300px;
+  
+    }
+
+    #board-title,
+    #board-titlehome{
+    margin-top: -30%;
+    font-family: 'Verdana';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 18px;
+   /* // identical to box height, or 90% */
+    text-align: center;
+    color: #EEEEEE;
+    padding-right:10%;
+   
+}
+
+#guestscore,
+#homescore{
+    background: #080001;
+    border-radius: 5px;
+    width: 80px;
+    height: 60px;
+    padding-top: 20%;
+    padding: 0%;
+}
+
+#score-guest,
+#score-home{
+    font-family: 'Cursed Timer ULiL';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 50px;
+  /* //  or 141% */
+    text-align: center;
+    color: #F94F6D;
+}
+
+.home-logo,
+.guest-logo{
+    margin-top: 5px;
+    height: 40px;
+    width: 40px;
+}
+
+#inc,
+#dec{
+    background-color:#1B244A ;
+    box-sizing: border-box;
+    width: 30px;
+    height: 30px;
+    border: 2px solid #9AABD8;
+    border-radius: 5px;
+    font-size: 15px;
+}
+
+h4{
+    align-items: center;
+    width: 30px;
+    height: 25.77px;
+    left: 89px;
+    top: 280px;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 2px;   
+}
+
+
+#won{
+    margin: 0%;
+}
+#but{   
+    padding-right: 100%;
+    padding-top: 70%;   
+}
+#winner{
+    background-color: transparent;
+    border-radius: 15%;
+    padding: 0%;
+}
+}
+
+
+@media only screen and (max-width: 500px ){
+    .container{
+        max-width: 350px;
+    }
+
+    .home-logo,
+.guest-logo{
+    margin-top: 5px;
+    height: 40px;
+    width: 40px;
+}
+
+}
+
+
+
+@media only screen and (max-width: 400px ){
+     
+    .container{
+    max-width: 350px;
+    width: 575px;
+    height: 300px;
+}
+
+    #board-title,
+    #board-titlehome{
+    font-weight: 1000; 
+}
+
+
+#score-guest,
+#score-home{
+    font-weight: 700;
+}
+
+.home-logo,
+.guest-logo{
+    margin-top: 5px;
+    height: 40px;
+    width: 40px;
+}
+
+#won{
+    margin: 0%;
+}
+#but{   
+    padding-right: 100%;
+    padding-top: 70%;   
+}
+#winner{
+    background-color: transparent;
+    border-radius: 15%;
+    padding: 0%;
+}
+#inc,
+#dec{
+    font-size: 15px;
+}
+
+}
+
+
+
+@media only screen and (max-width: 320px ){
+    
+    .container{
+    max-width: 350px;
+    width: 575px;
+    height: 300px;
+    }
+
+    #board-title,
+    #board-titlehome{
+    font-weight: 1000; 
+}
+
+
+#score-guest,
+#score-home{
+    font-weight: 700;
+}
+
+.home-logo,
+.guest-logo{
+    margin-top: 5px;
+    height: 40px;
+    width: 40px;
+}
+
+#won{
+    margin: 0%;
+}
+#but{   
+    padding-right: 100%;
+    padding-top: 70%;   
+}
+#winner{
+    background-color: transparent;
+    border-radius: 15%;
+    padding: 0%;
+}
+
+#inc,
+#dec{
+    font-size: 15px;
+}
+
+} 
+
+@media only screen and (max-width : 658px){
+    .container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* max-width: 80%; */
+        /*margin-top: 20%;*/
+        
+        width: 900px;
+        height: 400px;
+        background-image: linear-gradient(180deg, #200835 0%,#000000  100%);
+        border-radius: 5%;
+        box-shadow: 2px 2px 2px 2px black,-2px -2px  white;
+    }
+}
 
 
