--- a/scorebd.css
+++ b/scorebd.css
@@ -1,12 +1,10 @@
 body {
     font-style: curs;
-    margin: 0%;
+    margin: 5px;
     text-align: center;
-    
-    padding-top: 10%;
-    padding-left: 15%;
     background-image: url(ball.jpg);
     background-image: 100%;
+    margin-bottom: 10%;
    
 }
 
@@ -24,7 +22,7 @@ body {
     height: 400px;
     background-image: linear-gradient(180deg, #200835 0%,#000000  100%);
     border-radius: 5%;
-    box-shadow: 2px 2px 2px black,-2px -2px white;
+    box-shadow: 2px 2px 20px black,-2px -2px white;
    
 }
 
@@ -178,18 +176,35 @@ h4{
     color: #9AABD8;
 }
 
+#won{
+    margin-top: 15px;
+    color: white;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400px;
+    margin-right: 10%;
+}
+#but{   
+    
+}
+#winner:hover{
+    background-color: #1B244A;
+    border-radius: 15%;
+    padding: 0%;
+}
+
 
 
 
 @media only screen and (max-width: 600px ){
     
     #home-div{
-        margin-left: 70%;
+      
         padding: 4%;    
     }
 
     #guest-div{
-        margin-right: -50%;
+        
         padding: 4%;   
     }
     .container{
@@ -270,13 +285,12 @@ h4{
     margin: 0%;
 }
 #but{   
-    padding-right: 100%;
-    padding-top: 70%;   
+    
 }
 #winner{
-    background-color: transparent;
+    
     border-radius: 15%;
-    padding: 0%;
+    padding: 0;
 }
 }
 
@@ -327,11 +341,10 @@ h4{
     margin: 0%;
 }
 #but{   
-    padding-right: 100%;
-    padding-top: 70%;   
+     
 }
 #winner{
-    background-color: transparent;
+   
     border-radius: 15%;
     padding: 0%;
 }
@@ -345,22 +358,27 @@ h4{
 
 
 @media only screen and (max-width: 320px ){
+    #timer{
+        margin-right: 20%;
+    }
     .time{
-        margin-left: 40%;
+        margin-left: 20%;
+        margin-bottom: 20px;
     }
     .all-butt{
         display: flex;
    
     }
     body{
-        margin: 20% 0% 0% 30%;
+        
     }
     
     .container{
     align-content: center;
-    max-width: 350px;
+    max-width: 320px;
     width: 575px;
-    height: 300px;
+   
+    
     }
 
     #board-title,
@@ -382,14 +400,21 @@ h4{
 }
 
 #won{
-    margin: 0%;
+    margin-top: 15px;
+    color: white;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400px;
+    margin-right: 75%;
 }
 #but{   
-    padding-right: 100%;
-    padding-top: 70%;   
+    
 }
 #winner{
-    background-color: transparent;
+    color: #29448d;
+}
+#winner:hover{
+    background-color: #1B244A;
     border-radius: 15%;
     padding: 0%;
 }
@@ -397,6 +422,10 @@ h4{
 #inc,
 #dec{
     font-size: 15px;
+}
+.but{
+    margin-right: 40%;
+    margin-top: 10px;
 }
 
 } 
@@ -408,10 +437,8 @@ h4{
         justify-content: center;
         /* max-width: 80%; */
         /*margin-top: 20%;*/
-        
         width: 900px;
-        height: 400px;
-        background-image: linear-gradient(180deg, #200835 0%,#000000  100%);
+        background-image: linear-gradient(0deg, #200835 0%,#000000  100%);
         border-radius: 5%;
         box-shadow: 2px 2px 2px 2px black,-2px -2px  white;
     }
@@ -423,7 +450,7 @@ h4{
     background-color: #13db1a; /* Green */
     border: none;
     border-radius: 5px;
-    box-shadow: -2px -2px 2px 2px #EEEEEE;
+    box-shadow: -2px 2px 2px 2px #EEEEEE;
     color: white;
     padding: 15px 32px;
     text-align: center;
