--- a/scorebd.css
+++ b/scorebd.css
@@ -430,6 +430,81 @@ h4{
 
 } 
 
+
+
+@media only screen and (max-width: 414px ){
+    #timer{
+        margin-right: 20%;
+    }
+    .time{
+        margin-left: 20%;
+        margin-bottom: 20px;
+    }
+    .all-butt{
+        display: flex;
+   
+    }
+    body{
+        
+    }
+    
+    .container{
+    align-content: center;
+    max-width: 320px;
+    width: 575px;
+   
+    
+    }
+
+    #board-title,
+    #board-titlehome{
+    font-weight: 1000; 
+}
+
+
+#score-guest,
+#score-home{
+    font-weight: 700;
+}
+
+.home-logo,
+.guest-logo{
+    margin-top: 5px;
+    height: 40px;
+    width: 40px;
+}
+
+#won{
+    margin-top: 15px;
+    color: white;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400px;
+    margin-right: 75%;
+}
+#but{   
+    
+}
+#winner{
+    color: #29448d;
+}
+#winner:hover{
+    background-color: #1B244A;
+    border-radius: 15%;
+    padding: 0%;
+}
+
+#inc,
+#dec{
+    font-size: 15px;
+}
+.but{
+    margin-right: 40%;
+    margin-top: 10px;
+}
+
+} 
+
 @media only screen and (max-width : 658px){
     .container{
         display: flex;
